--- a/Natural Language Processing in TensorFlow/Week 4 - Lesson 1 - Notebook.ipynb
+++ b/Natural Language Processing in TensorFlow/Week 4 - Lesson 1 - Notebook.ipynb
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "BOwsuGQQY9OL",
         "colab_type": "code",
-        "outputId": "b93efa97-3f25-421f-bbbd-244013460635",
+        "outputId": "b5d62881-beef-410e-979a-1f64055501eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
@@ -57,6 +57,7 @@
             "Requirement already satisfied: gast==0.2.2 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (0.2.2)\n",
             "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (1.15.0)\n",
             "Requirement already satisfied: numpy<2.0,>=1.16.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (1.16.4)\n",
+            "Requirement already satisfied: mock>=2.0.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (2.0.0)\n",
             "Requirement already satisfied: tensorboard<2.1.0,>=2.0.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (2.0.2)\n",
             "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (1.11.2)\n",
             "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (3.7.1)\n",
@@ -66,7 +67,6 @@
             "Requirement already satisfied: wheel in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (0.33.6)\n",
             "Requirement already satisfied: functools32>=3.2.3 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (3.2.3.post2)\n",
             "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (1.12.0)\n",
-            "Requirement already satisfied: mock>=2.0.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (2.0.0)\n",
             "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (0.7.1)\n",
             "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (2.3.2)\n",
             "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (1.1.0)\n",
@@ -75,6 +75,8 @@
             "Requirement already satisfied: tensorflow-estimator<2.1.0,>=2.0.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (2.0.1)\n",
             "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python2.7/dist-packages (from tensorflow-gpu==2.0.0) (0.8.0)\n",
             "Requirement already satisfied: futures>=2.2.0 in /usr/local/lib/python2.7/dist-packages (from grpcio>=1.8.6->tensorflow-gpu==2.0.0) (3.2.0)\n",
+            "Requirement already satisfied: funcsigs>=1; python_version < \"3.3\" in /usr/local/lib/python2.7/dist-packages (from mock>=2.0.0->tensorflow-gpu==2.0.0) (1.0.2)\n",
+            "Requirement already satisfied: pbr>=0.11 in /usr/local/lib/python2.7/dist-packages (from mock>=2.0.0->tensorflow-gpu==2.0.0) (5.4.0)\n",
             "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python2.7/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (42.0.2)\n",
             "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python2.7/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.4.1)\n",
             "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python2.7/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.15.5)\n",
@@ -82,8 +84,6 @@
             "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python2.7/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (2.21.0)\n",
             "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python2.7/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (3.1.1)\n",
             "Requirement already satisfied: h5py in /usr/local/lib/python2.7/dist-packages (from keras-applications>=1.0.8->tensorflow-gpu==2.0.0) (2.8.0)\n",
-            "Requirement already satisfied: funcsigs>=1; python_version < \"3.3\" in /usr/local/lib/python2.7/dist-packages (from mock>=2.0.0->tensorflow-gpu==2.0.0) (1.0.2)\n",
-            "Requirement already satisfied: pbr>=0.11 in /usr/local/lib/python2.7/dist-packages (from mock>=2.0.0->tensorflow-gpu==2.0.0) (5.4.0)\n",
             "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python2.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (1.2.0)\n",
             "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python2.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.2.5)\n",
             "Requirement already satisfied: cachetools<3.2,>=2.0.0 in /usr/local/lib/python2.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (3.1.1)\n",
@@ -108,15 +108,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 74
         },
-        "outputId": "2c999e12-18ab-4831-f725-127d3b585a8d"
+        "outputId": "e0f87ddb-ba6e-4119-a867-3b142ecedd5c"
       },
       "source": [
         "tokenizer = Tokenizer()\n",
-        "\n",
+        "# Single song from traditional Irish music\n",
         "data=\"In the town of Athy one Jeremy Lanigan \\n Battered away til he hadnt a pound. \\nHis father died and made him a man again \\n Left him a farm and ten acres of ground. \\nHe gave a grand party for friends and relations \\nWho didnt forget him when come to the wall, \\nAnd if youll but listen Ill make your eyes glisten \\nOf the rows and the ructions of Lanigans Ball. \\nMyself to be sure got free invitation, \\nFor all the nice girls and boys I might ask, \\nAnd just in a minute both friends and relations \\nWere dancing round merry as bees round a cask. \\nJudy ODaly, that nice little milliner, \\nShe tipped me a wink for to give her a call, \\nAnd I soon arrived with Peggy McGilligan \\nJust in time for Lanigans Ball. \\nThere were lashings of punch and wine for the ladies, \\nPotatoes and cakes; there was bacon and tea, \\nThere were the Nolans, Dolans, OGradys \\nCourting the girls and dancing away. \\nSongs they went round as plenty as water, \\nThe harp that once sounded in Taras old hall,\\nSweet Nelly Gray and The Rat Catchers Daughter,\\nAll singing together at Lanigans Ball. \\nThey were doing all kinds of nonsensical polkas \\nAll round the room in a whirligig. \\nJulia and I, we banished their nonsense \\nAnd tipped them the twist of a reel and a jig. \\nAch mavrone, how the girls got all mad at me \\nDanced til youd think the ceiling would fall. \\nFor I spent three weeks at Brooks Academy \\nLearning new steps for Lanigans Ball. \\nThree long weeks I spent up in Dublin, \\nThree long weeks to learn nothing at all,\\n Three long weeks I spent up in Dublin, \\nLearning new steps for Lanigans Ball. \\nShe stepped out and I stepped in again, \\nI stepped out and she stepped in again, \\nShe stepped out and I stepped in again, \\nLearning new steps for Lanigans Ball. \\nBoys were all merry and the girls they were hearty \\nAnd danced all around in couples and groups, \\nTil an accident happened, young Terrance McCarthy \\nPut his right leg through miss Finnertys hoops. \\nPoor creature fainted and cried Meelia murther, \\nCalled for her brothers and gathered them all. \\nCarmody swore that hed go no further \\nTil he had satisfaction at Lanigans Ball. \\nIn the midst of the row miss Kerrigan fainted, \\nHer cheeks at the same time as red as a rose. \\nSome of the lads declared she was painted, \\nShe took a small drop too much, I suppose. \\nHer sweetheart, Ned Morgan, so powerful and able, \\nWhen he saw his fair colleen stretched out by the wall, \\nTore the left leg from under the table \\nAnd smashed all the Chaneys at Lanigans Ball. \\nBoys, oh boys, twas then there were runctions. \\nMyself got a lick from big Phelim McHugh. \\nI soon replied to his introduction \\nAnd kicked up a terrible hullabaloo. \\nOld Casey, the piper, was near being strangled. \\nThey squeezed up his pipes, bellows, chanters and all. \\nThe girls, in their ribbons, they got all entangled \\nAnd that put an end to Lanigans Ball.\"\n",
         "\n",
         "corpus = data.lower().split(\"\\n\")\n",
         "\n",
+        "# tokenize on corpus\n",
         "tokenizer.fit_on_texts(corpus)\n",
         "total_words = len(tokenizer.word_index) + 1\n",
         "\n",
@@ -143,25 +144,88 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "input_sequences = []\n",
         "for line in corpus:\n",
+        "\t# tokenize one line, convert to int from word_index\n",
         "\ttoken_list = tokenizer.texts_to_sequences([line])[0]\n",
         "\tfor i in range(1, len(token_list)):\n",
+        "\t\t# for everyline of text create n-gram tokenized sequence\n",
         "\t\tn_gram_sequence = token_list[:i+1]\n",
         "\t\tinput_sequences.append(n_gram_sequence)\n",
         "\n",
         "# pad sequences \n",
-        "max_sequence_len = max([len(x) for x in input_sequences])\n",
+        " = max([len(x) for x in input_sequences])\n",
         "input_sequences = np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))\n",
         "\n",
         "# create predictors and label\n",
         "xs, labels = input_sequences[:,:-1],input_sequences[:,-1]\n",
         "\n",
+        "# sparse one-hot encoding\n",
         "ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DBIow3-3jD9Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        },
+        "outputId": "1a4a8f16-5467-4f21-e530-2f0e55099cae"
+      },
+      "source": [
+        "print(\"n_gram_sequence length: \" +   str(len(n_gram_sequence)))\n",
+        "print(\"Input sequences shape: \" +   str(input_sequences.shape))\n",
+        "print(\"max_sequence_len: \" +   str(max_sequence_len))\n",
+        "print(input_sequences[0])\n",
+        "print(input_sequences[1])\n",
+        "print(input_sequences[2])\n",
+        "print(input_sequences[3])\n",
+        "print(input_sequences[4])\n",
+        "print(input_sequences[5])\n",
+        "print(input_sequences[6])\n",
+        "print (\"New poem line ngrams: \")\n",
+        "print(input_sequences[7])\n",
+        "print(input_sequences[8])\n",
+        "print(input_sequences[10])\n",
+        "print(input_sequences[11])\n",
+        "print(input_sequences[12])\n",
+        "print (\"New poem line ngrams: \")\n",
+        "print(input_sequences[13])\n",
+        "print(input_sequences[14])"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "n_gram_sequence length: 8\n",
+            "Input sequences shape: (453, 11)\n",
+            "max_sequence_len: 11\n",
+            "[0 0 0 0 0 0 0 0 0 4 2]\n",
+            "[ 0  0  0  0  0  0  0  0  4  2 66]\n",
+            "[ 0  0  0  0  0  0  0  4  2 66  8]\n",
+            "[ 0  0  0  0  0  0  4  2 66  8 67]\n",
+            "[ 0  0  0  0  0  4  2 66  8 67 68]\n",
+            "[ 0  0  0  0  4  2 66  8 67 68 69]\n",
+            "[ 0  0  0  4  2 66  8 67 68 69 70]\n",
+            "New poem line ngrams: \n",
+            "[ 0  0  0  0  0  0  0  0  0 71 40]\n",
+            "[ 0  0  0  0  0  0  0  0 71 40 20]\n",
+            "[ 0  0  0  0  0  0 71 40 20 21 72]\n",
+            "[ 0  0  0  0  0 71 40 20 21 72  3]\n",
+            "[ 0  0  0  0 71 40 20 21 72  3 73]\n",
+            "New poem line ngrams: \n",
+            "[ 0  0  0  0  0  0  0  0  0 16 74]\n",
+            "[ 0  0  0  0  0  0  0  0 16 74 75]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
